# hello-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: hello.py
tests/: test_hello.py
