[project]
name = "hello-python"
version = "0.1.0"
description = "Sample python project"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pre-commit-hooks>=5.0.0",
    "pytest>=8.3.4",
    "pytest-mypy>=0.10.3",
    "ruff>=0.9.5",
]

[tool.pytest.ini_options]
addopts = ["--mypy"]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = [
  ".",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
no_namespace_packages = true
ignore_missing_imports = true
strict = true
